Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coming soon....</title>
-
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<img src="heart.png">
-	<h1>Watch this space</h1>
+	<div id="container">
+		<img id="logo" src="heart.png">
+		<h1>Watch this space</h1>
+	</div>
 </body>
 </html>
